--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>RAINBOW</h2>
-</body>
+<html>
+    <h2>Choose a car:</h2>
+    <form>
+    <select>
+        <option>volvo</option>
+        <option>Flat</option>
+        <option>Audi</option>
+    </select>
+    </form>
 </html>
